tests/negative/neg_pr118b1_duplicate_send_contract.safe
-- Test: neg_pr118b1_duplicate_send_contract
-- Description: Duplicate channels within the same sends clause are rejected.
-- Expected: REJECT

package neg_pr118b1_duplicate_send_contract

   subtype message is integer (0 to 10)

   channel data_ch : message capacity 1

   task worker with priority = 10, sends data_ch, data_ch
      sent : boolean = false

      loop
         send data_ch, 1, sent
